# Qt

./: .gitignore
DesktopApp/: CMakeLists.txt
DesktopApp/src/: Main.cpp
